public class AmministratoreSedeAMA extends UtenteSistema {

}
